[package]
name = "mono_display"
version = "0.1.0"
authors = ["Sergey Ulanov <sulanov@gmail.com>"]
description = "Library for monochrome displays."
license = "BSD-3-Clause"
repository = "https://github.com/sulanov/mono_display"

[features]
default = []
#default = [ "sdl2" ]

[dependencies]
rppal = "0.8.0"
font-rs = "0.1.3"
bdf = "0.5.5"
sdl2 = { version = "0.31.0", optional = true }
